<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>experiment</groupId>
    <artifactId>2023-java-list</artifactId>
    <version>0.1</version>

    <properties>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
    </dependencies>

    <build>
    </build>

</project>
